--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
   ],
   "require": {
     "php": "^7.4||^8.0.3",
-    "ext-json": "*"
+    "ext-json": "*",
+    "ext-mbstring": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
