--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     }
   ],
   "require": {
-    "php": "^7.4||^8.0.3",
+    "php": "^8.0.3",
     "ext-json": "*",
     "ext-mbstring": "*"
   },
