--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "pecee/simple-router",
+  "name": "developermarius/simple-router",
   "description": "Simple, fast PHP router that is easy to get integrated and in almost any project. Heavily inspired by the Laravel router.",
   "keywords": [
     "router",
@@ -18,12 +18,16 @@
   ],
   "license": "MIT",
   "support": {
-    "source": "https://github.com/skipperbent/simple-php-router/issues"
+    "source": "https://github.com/DeveloperMarius/simple-php-router/issues"
   },
   "authors": [
     {
       "name": "Simon Sessingø",
       "email": "simon.sessingoe@gmail.com"
+    },
+    {
+      "name": "Marius Karstedt",
+      "email": "info@marius-karstedt.de"
     }
   ],
   "require": {
